[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "insight"
description = "A python library for monitoring, comparing and extracting insights from data."
readme = "README.md"
license = {text = "BSD 3-Clause License"}
requires-python = ">= 3.7"
authors = [
  { name = "Synthesized Ltd.", email = "ml@synthesized.io" },
  { name = "Daniel Sabanov", email = "daniel@sadogursky.com" },
  { name = "Simon Swan", email = "shk.swan@gmail.com" }
]
keywords = [
  "metrics",
  "data",
  "evaluation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering",
]

dynamic = ["version"]

dependencies = [
    "matplotlib >= 3.4",
    "numpy >= 1.18",
    "pandas >= 1.2",
    "scipy >= 1.5",
    "seaborn >= 0.11.0",
]

  [project.optional-dependencies]
  db = [
    "alembic",
    "sqlalchemy >= 2.0",
    "psycopg2 >= 2.9; platform_machine!='arm64' or platform_system!='Darwin'",
    "psycopg2-binary >= 2.9; platform_machine=='arm64' or platform_system=='Darwin'",
  ]

  test = [
    "pytest",
    "pytest-cov",
  ]
  dev = [
    "pre-commit",
    "pylint",
  ]

  [project.scripts]
  insight-migrations = "insight.alembic.main:main"

  [project.urls]
  homepage = "https://github.com/synthesized-io/insight"
  documentation = "https://docs.synthesized.io/"
  repository = "https://github.com/synthesized-io/insight"

[tool]
  [tool.setuptools]
  platforms = [
    "MacOS",
    "Windows",
    "Linux",
  ]

  [tool.setuptools.dynamic]
  version = {attr = "insight.version.version"}

  [tool.setuptools.packages.find]
  where = ["src"]

  [tool.setuptools_scm]
  write_to = "src/insight/version.py"

  [tool.setuptools.package-data]
  insight = ["src/insight/fonts/SourceSansPro-Regular.ttf"]

  [tool.pytest.ini_options]
  junit_suite_name = "unit"
  junit_logging = "all"
  junit_log_passing_tests = true
  junit_duration_report = "call"
  junit_family = "xunit1"
  log_level = "INFO"

  [tool.mypy]
  plugins = "numpy.typing.mypy_plugin, sqlalchemy.ext.mypy.plugin"

  [[tool.mypy.overrides]]
  module = "pandas.*"
  ignore_missing_imports = true

  [[tool.mypy.overrides]]
  module = "matplotlib.*"
  ignore_missing_imports = true

  [[tool.mypy.overrides]]
  module = "scipy.*"
  ignore_missing_imports = true

  [[tool.mypy.overrides]]
  module = "seaborn.*"
  ignore_missing_imports = true

  [tool.isort]
  profile = "black"
  multi_line_output = 3
  include_trailing_comma = true
  force_grid_wrap = 0
  use_parentheses = true
  ensure_newline_before_comments = true
  line_length = 100

  [tool.black]
  line-length = 100
