[metadata]
name = synthesized-insight
description = Synthesized data insights and evaluation framework.
long_description = file: README.md
author = Synthesized Ltd.
author_email = team@synthesized.io
license_file = LICENSE.md
classifiers =
    Programming Language :: Python 3
project_urls =
    homepage = https://synthesized.io
    documentation = https://docs.synthesized.io/
    repository = https://github.com/synthesized-io/synthesized-insight

[flake8]
max-line-length = 120
ignore = E402, E501, W503

[mypy]
ignore_missing_imports = True
