[metadata]
name = synthesized-insight
description = Synthesized data insights and evaluation framework.
long_description = file: README.md
author = Synthesized Ltd.
author_email = team@synthesized.io
license_file = LICENSE.md
classifiers =
    Programming Language :: Python 3
project_urls =
    homepage = https://synthesized.io
    documentation = https://docs.synthesized.io/
    repository = https://github.com/synthesized-io/synthesized-insight

[options]
packages = find:
package_dir =
    = src
zip_safe = False
install_requires =
    numpy >= 1.18.4, < 1.20.0
    pandas ~= 1.1
    scikit_learn ~= 0.23
    scipy ~= 1.5
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx==3.5.4
    pydata-sphinx-theme==0.6.3
    sphinx-panels==0.5.2
    sphinx-autodoc-typehints==1.12.0
    sphinx-inline-tabs==2021.3.28b7
    ipython>=7.2.0
dev =
    typing_extensions; python_version < '3.7'
    types-setuptools
    types-simplejson
    types-PyYAML
    types-pkg-resources
    flake8
    mypy
    build
    pre-commit

[flake8]
max-line-length = 120
ignore = E402, E501, W503

[mypy]
ignore_missing_imports = True
