[metadata]
name = synthesized-insight
description = Synthesized data insights and evaluation framework.
long_description = file: README.md
author = Synthesized Ltd.
author_email = team@synthesized.io
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 3 - Alpha
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    homepage = https://synthesized.io
    documentation = https://docs.synthesized.io/
    repository = https://github.com/synthesized-io/synthesized-insight

[options]
packages = find:
package_dir =
    = src
install_requires =
    dcor ~= 0.5.3
    numpy ~= 1.21
    pandas ~= 1.1
    scikit_learn ~= 0.23
    scipy ~= 1.5
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx ~= 4.0
    pydata-sphinx-theme ~= 0.6
    sphinx-panels ~= 0.5
    sphinx-autodoc-typehints ~= 1.12
    sphinx-inline-tabs == 2021.3.28b7
    ipython >= 7.2.0
dev =
    pre-commit

[flake8]
max-line-length = 120
ignore = E402, E501, W503

[mypy]
ignore_missing_imports = True

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120
